fix: show scrollbars when content overflows

--- a/satfetcher/static/style.css
+++ b/satfetcher/static/style.css
@@ -44,25 +44,35 @@ input[type="submit"] {
     width: fit-content;
 }
 
-#result {
-    font-family: monospace;
+#result-container {
+    position: relative;
+
+    width: 50%;
+    min-height: 20px;
+    max-height: 300px;
+
     margin: 10px auto;
     padding: 10px;
-    width: 50%;
-    min-height: 2em;
-    background-color: var(--green-light);
+    overflow: auto;
+
     border-radius: 10px;
     border: 1px dashed var(--blue-ocean);
-    overflow: auto;
+    background-color: var(--green-light);
+}
+
+#result {
+    font-family: monospace;
+    margin: 0;
 }
 
 #copy-btn {
     position: absolute;
     top: 10px;
-    right: 26%;
-    background-size: 20px;
+    right: 15px;
+
     width: 20px;
     height: 20px;
+    background-size: 20px;
 }
 
 .copy-icon {
